# YOLOv8-OpenVINO-CPP-Inference-Windows

./: CMakeLists.txt  README.md
